--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/SearchResult/_ResultTemplate.cshtml
@@ -54,75 +54,75 @@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="4">1個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= MonthlyReturnMarketPriceOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= MonthlyReturnMarketPriceOriginalCurrency.Text %></span>
+                <span class="<%= MonthlyReturnMarketPriceOriginalCurrency.Key %>"><%= MonthlyReturnMarketPriceOriginalCurrency.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="5">3個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= ThreeMonthReturnMarketPriceOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= ThreeMonthReturnMarketPriceOriginalCurrency.Text %></span>
+                <span class="<%= ThreeMonthReturnMarketPriceOriginalCurrency.Key %>"><%= ThreeMonthReturnMarketPriceOriginalCurrency.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="4">6個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= SixMonthReturnMarketPriceOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= SixMonthReturnMarketPriceOriginalCurrency.Text %></span>
+                <span class="<%= SixMonthReturnMarketPriceOriginalCurrency.Key %>"><%= SixMonthReturnMarketPriceOriginalCurrency.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="5">1年</div>
             <div class="c-cardTable__content">
-                <span class="<%= OneYearReturnMarketPriceOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= OneYearReturnMarketPriceOriginalCurrency.Text %></span>
+                <span class="<%= OneYearReturnMarketPriceOriginalCurrency.Key %>"><%= OneYearReturnMarketPriceOriginalCurrency.Text %></span>
             </div>
         </td>
         @*【市價績效-報酬(台幣)】=> 市價績效*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="4">1個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= MonthlyReturnMarketPriceTWD.Key == true ? 'o-rise' : 'o-fall' %>"><%= MonthlyReturnMarketPriceTWD.Text %></span>
+                <span class="<%= MonthlyReturnMarketPriceTWD.Key %>"><%= MonthlyReturnMarketPriceTWD.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="5">3個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= ThreeMonthReturnMarketPriceTWD.Key == true ? 'o-rise' : 'o-fall' %>"><%= ThreeMonthReturnMarketPriceTWD.Text %></span>
+                <span class="<%= ThreeMonthReturnMarketPriceTWD.Key %>"><%= ThreeMonthReturnMarketPriceTWD.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="4">6個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= SixMonthReturnMarketPriceTWD.Key == true ? 'o-rise' : 'o-fall' %>"><%= SixMonthReturnMarketPriceTWD.Text %></span>
+                <span class="<%= SixMonthReturnMarketPriceTWD.Key %>"><%= SixMonthReturnMarketPriceTWD.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="marketPriceTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="5">1年</div>
             <div class="c-cardTable__content">
-                <span class="<%= OneYearReturnMarketPriceOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= OneYearReturnMarketPriceOriginalCurrency.Text %></span>
+                <span class="<%= OneYearReturnMarketPriceOriginalCurrency.Key %>"><%= OneYearReturnMarketPriceOriginalCurrency.Text %></span>
             </div>
         </td>
         @*【淨值績效-報酬(原幣)】=> 淨值績效*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="4">1個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= MonthlyReturnNetValueOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= MonthlyReturnNetValueOriginalCurrency.Text %></span>
+                <span class="<%= MonthlyReturnNetValueOriginalCurrency.Key %>"><%= MonthlyReturnNetValueOriginalCurrency.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="5">3個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= ThreeMonthReturnNetValueOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= ThreeMonthReturnNetValueOriginalCurrency.Text %></span>
+                <span class="<%= ThreeMonthReturnNetValueOriginalCurrency.Key %>"><%= ThreeMonthReturnNetValueOriginalCurrency.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="4">6個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= SixMonthReturnNetValueOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= SixMonthReturnNetValueOriginalCurrency.Text %></span>
+                <span class="<%= SixMonthReturnNetValueOriginalCurrency.Key %>"><%= SixMonthReturnNetValueOriginalCurrency.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="Original">
             <div class="c-cardTable__title" data-length="5">1年</div>
             <div class="c-cardTable__content">
-                <span class="<%= OneYearReturnNetValueOriginalCurrency.Key == true ? 'o-rise' : 'o-fall' %>"><%= OneYearReturnNetValueOriginalCurrency.Text %></span>
+                <span class="<%= OneYearReturnNetValueOriginalCurrency.Key %>"><%= OneYearReturnNetValueOriginalCurrency.Text %></span>
             </div>
         </td>
 
@@ -130,25 +130,25 @@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="4">1個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= MonthlyReturnNetValueTWD.Key == true ? 'o-rise' : 'o-fall' %>"><%= MonthlyReturnNetValueTWD.Text %></span>
+                <span class="<%= MonthlyReturnNetValueTWD.Key %>"><%= MonthlyReturnNetValueTWD.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="5">3個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= ThreeMonthReturnNetValueTWD.Key == true ? 'o-rise' : 'o-fall' %>"><%= ThreeMonthReturnNetValueTWD.Text %></span>
+                <span class="<%= ThreeMonthReturnNetValueTWD.Key %>"><%= ThreeMonthReturnNetValueTWD.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="4">6個月</div>
             <div class="c-cardTable__content">
-                <span class="<%= SixMonthReturnNetValueTWD.Key == true ? 'o-rise' : 'o-fall' %>"><%= SixMonthReturnNetValueTWD.Text %></span>
+                <span class="<%= SixMonthReturnNetValueTWD.Key %>"><%= SixMonthReturnNetValueTWD.Text %></span>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="netWorthTable" data-table-column-currency="TWD">
             <div class="c-cardTable__title" data-length="5">1年</div>
             <div class="c-cardTable__content">
-                <span class="<%= OneYearReturnNetValueTWD.Key == true ? 'o-rise' : 'o-fall' %>"><%= OneYearReturnNetValueTWD.Text %></span>
+                <span class="<%= OneYearReturnNetValueTWD.Key %>"><%= OneYearReturnNetValueTWD.Text %></span>
             </div>
         </td>
         @*【風險屬性】=> 市價風險,淨值風險*@
@@ -189,7 +189,7 @@
         @*【折溢價】=> 交易狀況*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="tradeTable">
             <div class="c-cardTable__title" data-length="5">折溢價</div>
-            <span class="<%= DiscountPremium.Key == true ? 'o-rise' : 'o-fall' %>"><%= DiscountPremium.Text %></span>
+            <span class="<%= DiscountPremium.Key %>"><%= DiscountPremium.Text %></span>
         </td>
         @*【最新量】=> 交易狀況*@
         <td class="c-cardTable__body" data-card-table-width="1/2" data-table-name="tradeTable">
