--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -326,7 +326,7 @@
         <!-- .u-wrap@dt-only: 桌機版(desktop)自動折行 -->
         <td class="c-cardTable__header u-wrap@dt-only u-left@dt-only">
             <div class="c-cardTable__content">
-                <a href="<%= DetailLink %>" class="o-contentLink t-bold u-ellipsis-2"><%= FullName %></a>
+                <a href="<%= DetailLink %>" class="o-contentLink t-bold u-ellipsis-2" target="_blank"><%= FullName %></a>
             </div>
             <% if (Tags != null && Tags.length > 0) { %>
                 <% for(var i = 0; i < Tags.length; i++ ) { %>
