--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/_GobalIndexMainstagePartial.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/_GobalIndexMainstagePartial.cshtml
@@ -4,7 +4,7 @@
 <div class="l-cardFund__item">
     <div class="c-box u-shadow-animation">
         <div class="c-cardFund c-cardFund--half">
-            <a href="@Model.DetailLink" class="c-cardFund__name u-center">
+            <a href="@Model.DetailLink" class="c-cardFund__name u-center" target="_blank">
                 <div class="u-ellipsis-2">@Model.IndexName</div>
                 <div class="u-ellipsis-1">@Model.MarketPriceText</div>
             </a>
