預設以六個月報酬率 (市價原幣) 排序

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -153,6 +153,17 @@
                 }
             }
 
+            function initSort() {
+                var tableName = 'marketPriceTable';
+                var sortingColumn = 'SixMonthReturnMarketPriceOriginalCurrency.Value';
+                var orderby = 'is-desc';
+
+                var $sortingbox = $(`[data-sorting-linkto="${tableName}"]`);
+                var $option = $(`option[data-sorting-column="${sortingColumn}"][data-sorting-class="${orderby}"]`, $sortingbox);
+                $option.attr('selected', 'selected')
+                $option.trigger('change');
+            }
+
             //#region Reset Object
 
             var propertyResetObj = {
@@ -458,6 +469,7 @@
                     this.GenerateSearchKeywordList();
                     var fjs = createFilterJS();
                     this.FJS = fjs;
+                    initSort();
                 },
                 GenerateSearchKeywordList: function () {
                     this.SearchKeyword.Init();
