--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
@@ -539,7 +539,7 @@
         <td class="u-left u-wrap">
             <div class="u-ellipsis-1lt">
                 <% if (DetailLink) { %>
-                    <a href="<%= DetailLink %>" class="o-contentLink t-bold"><%= name %></a>
+                    <a href="<%= DetailLink %>" class="o-contentLink t-bold" target="_blank"><%= name %></a>
                 <% } else { %>
                     <span class="t-bold"><%= name %></span>
                 <% } %>
